Archive2/39/b3d58314618ce3/output
main.cpp:2:1: error: 'include' does not name a type
 include <iostream>
 ^
main.cpp: In function 'int main()':
main.cpp:8:6: error: 'cin' was not declared in this scope
      cin >> num;
      ^
main.cpp:8:6: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/5.1.0/iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^
main.cpp:20:6: error: 'cout' was not declared in this scope
      cout << base;
      ^
main.cpp:20:6: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/5.1.0/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:20:18: error: expected '}' at end of input
      cout << base;
                  ^
