Archive2/39/b3d58314618ce3/main.cpp
#include <iostream>
include <iostream>
using namespace std;
int main()
    {
     int num;
     int base = 0;
     cin >> num;
     while (num != 0){

     if(num > base){
       base = num;

     }
     cin >> num;


     }

     cout << base;



